<resources>
    <string name="app_name">BtDetector</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="sound_from_detector">Sound From Detector</string>
    <string name="sound_from_anroid">Sound From Android</string>
    <string name="connected">Connected</string>
    <string name="state">State</string>
    <string name="connecting">Connecting</string>
    <string name="none">None</string>
    <string name="listen">Listen</string>
    <string name="bluetooth_not_available">Bluetooth is not available</string>
    <string name="bluetooth_not_enabled">Bluetooth was not enabled.</string>
    <string name="zone01">Zone 1</string>
    <string name="zone02">Zone 2</string>
    <string name="zone03">Zone 3</string>
    <string name="zone04">Zone 4</string>
    <string name="zone05">Zone 5</string>
    <string name="save">Save</string>
    <string name="sound_from_tts">Sound From TTS</string>
    <string name="sendBeep">Send Beep</string>
    <string name="connect">Connect</string>
</resources>
